--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         width: 200px;
       }
     </style>
+    <script type="text/javascript">
+      window.onload = function () {
+        if (location.protocol != 'https:'){
+          location.href = 'https:' + window.location.href.substring(window.location.protocol.length)
+        }
+      }
+    </script>
   </head>
   <body>
     <h1><a href="./"><img src="./asset/img/logo@2x.png" alt="ANANTAKA"></a></h1>
